tests/snapshots/output__config_show.snap
---
source: tests/output.rs
info:
  program: losrs
  args:
    - "--config=[TMP_DIR]/losrs.toml"
    - config
    - show
  envs: {}
  page_lines:
    - - ""
---
success: true
exit_code: 0
----- stdout -----
{
  "output": {
    "format": "clean",
    "ppi": 96.0,
    "base_font_size": 12,
    "line_height_scaling": 1.2
  }
}

----- stderr -----
