tests/snapshots/output__metadata.snap
---
source: tests/output.rs
info:
  program: losrs
  args:
    - "--config=[TMP_DIR]/losrs.toml"
    - metadata
    - "[TMP_DIR]"
  envs: {}
  page_lines:
    - - "- Not card"
      - "- What is a sphere? #card"
      - "  card-last-interval:: 244.14"
      - "  card-repeats:: 6"
      - "  card-ease-factor:: 3.1"
      - "  card-next-schedule:: 2025-11-21T00:00:00.000Z"
      - "  card-last-reviewed:: 2025-03-22T09:54:57.202Z"
      - "  card-last-score:: 5"
      - "  - Set of points in a 3 dimensional space that are equidistant from a center point."
      - "- What is the volume of a sphere (symbolic)? #card <!-- CSN:5 -->"
      - "  card-last-interval:: 244.14"
      - "  card-repeats:: 6"
      - "  card-ease-factor:: 3.1"
      - "  card-next-schedule:: 2025-11-27T00:00:00.000Z"
      - "  card-last-reviewed:: 2025-03-28T07:46:41.223Z"
      - "  card-last-score:: 5"
      - "  - $$V = \\frac{4}{3} \\pi r^3$$"
      - "- Not card"
      - ""
---
success: true
exit_code: 0
----- stdout -----
CardMetadata {
  serial_num         : N/A
  source_path        : [TMP_DIR]/pages/0.md
  prompt_fingerprint : 0xb9de554a02212aca
  srs_meta           : SRSMeta {
    repeats       : 6
    next_schedule : 2025-11-21T00:00:00+00:00
    last_reviewed : 2025-03-22T09:54:57.202+00:00
    fsrs_meta     : Card { due: 2025-11-21T00:00:00Z, stability: 244.14, difficulty: 5.0, elapsed_days: 244, scheduled_days: 244, reps: 6, lapses: 0, state: Review, last_review: 2025-03-22T09:54:57.202Z }
  }
}
CardMetadata {
  serial_num         : 5
  source_path        : [TMP_DIR]/pages/0.md
  prompt_fingerprint : 0x7e7f6c73cea43876
  srs_meta           : SRSMeta {
    repeats       : 6
    next_schedule : 2025-11-27T00:00:00+00:00
    last_reviewed : 2025-03-28T07:46:41.223+00:00
    fsrs_meta     : Card { due: 2025-11-27T00:00:00Z, stability: 244.14, difficulty: 5.0, elapsed_days: 244, scheduled_days: 244, reps: 6, lapses: 0, state: Review, last_review: 2025-03-28T07:46:41.223Z }
  }
}

----- stderr -----
