tests/snapshots/output__root_help.snap
---
source: tests/output.rs
info:
  program: losrs
  args:
    - "--config=[TMP_DIR]/losrs.toml"
    - "--help"
  envs: {}
  page_lines:
    - - ""
---
success: true
exit_code: 0
----- stdout -----
Work with Spaced Repetition System (SRS) cards embedded in Logseq pages

Usage: losrs [OPTIONS] <COMMAND>

Commands:
  show          Print cards
  review        Review cards
  metadata      Print metadata for cards
  fix-metadata  Fix metadata for cards
  config        Manage configuration
  help          Print this message or the help of the given subcommand(s)

Options:
      --config <CONFIG>  Override path to the config file. Use `config path` command to find the default path
  -h, --help             Print help

----- stderr -----
