tests/snapshots/output__show.snap
---
source: tests/output.rs
info:
  program: losrs
  args:
    - "--config=[TMP_DIR]/losrs.toml"
    - show
    - "[TMP_DIR]"
  envs: {}
  page_lines:
    - - "- Not card"
      - "- What is a sphere? #card"
      - "  card-last-interval:: 244.14"
      - "  card-repeats:: 6"
      - "  card-ease-factor:: 3.1"
      - "  card-next-schedule:: 2025-11-21T00:00:00.000Z"
      - "  card-last-reviewed:: 2025-03-22T09:54:57.202Z"
      - "  card-last-score:: 5"
      - "  - Set of points in a 3 dimensional space that are equidistant from a center point."
      - "- Not card"
      - ""
---
success: true
exit_code: 0
----- stdout -----
- What is a sphere? #card
  - Set of points in a 3 dimensional space that are equidistant from a center point.

----- stderr -----
